# TFE19-2_Info

tfe19-2-testat-001/: .gitlab-ci.yml  CMakeLists.txt  README.md
tfe19-2-testat-001/contrib/CLI11/include/: CLI11.hpp
tfe19-2-testat-001/exercise-001/: CMakeLists.txt  README.md  main.cpp
tfe19-2-testat-001/templates/: CMakeLists.txt
tfe19-2-testat-001/templates/version_info/: CMakeLists.txt  main.cpp
tfe19-2-testat-001/testat-001/: CMakeLists.txt  README.md  main.cpp  tfevector.cpp
